--- a/src/main/webapp/static/css/base.css
+++ b/src/main/webapp/static/css/base.css
@@ -3,7 +3,7 @@ a [class^=icon-]:hover {
     text-decoration: none;
 }
 
-template {
+include {
     display: none;
 }
 
@@ -12,12 +12,12 @@ template {
     margin-left: -1px;
 }
 
-.row-fluid {
+.section {
     border-radius: 5px;
     margin-left: -5px;
     padding-left: 5px;
 }
-.row-fluid:nth-child(odd) {
+.section:nth-child(odd) {
     background-color: #f5f5f5;
 }
 
