--- a/src/main/webapp/static/include/css.html
+++ b/src/main/webapp/static/include/css.html
@@ -1,7 +1,7 @@
-<link type="text/css" rel="stylesheet" href="css/main.css"/>
-<link type="text/css" rel="stylesheet" href="css/normalize.css"/>
-<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
-<link type="text/css" rel="stylesheet" href="css/font-awesome.min.css"/>
+<link type="text/css" rel="stylesheet" href="/css/main.css"/>
+<link type="text/css" rel="stylesheet" href="/css/normalize.css"/>
+<link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css"/>
+<link type="text/css" rel="stylesheet" href="/css/font-awesome.min.css"/>
 
-<link type="text/css" rel="stylesheet" href="css/base.css"/>
-<link type="text/css" rel="stylesheet" href="css/tooltip.css"/>
+<link type="text/css" rel="stylesheet" href="/css/base.css"/>
+<link type="text/css" rel="stylesheet" href="/css/tooltip.css"/>
